--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi, deserunt recusandae tempore reprehenderit laboriosam iusto, saepe et aut sequi amet ratione.
+</body>
+</html>
